--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "stream-chat": "^9.27.2"
   }
 }
