--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "dependencies": {
-    "@supabase/supabase-js": "^2.89.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "googleapis": "^169.0.0",
-    "jsonwebtoken": "^9.0.3",
-    "multer": "^2.0.2",
-    "pg": "^8.16.3",
-    "postgres": "^3.4.7",
-    "stream-chat": "^9.27.2"
+    "@supabase/supabase-js": "^2.39.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "googleapis": "^129.0.0",
+    "dotenv": "^16.3.1"
   }
 }
