--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.91.1",
+    "airtable": "^0.12.2",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.2",
     "multer": "^1.4.5-lts.1",
-    "googleapis": "^129.0.0",
-    "dotenv": "^16.3.1"
+    "node-cache": "^5.1.2"
   }
 }
