--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
-    "airtable": "^0.12.2",
     "cors": "^2.8.6",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
+    "googleapis": "^170.1.0",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.2",
     "multer": "^1.4.5-lts.1",
