--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.2",
     "multer": "^1.4.5-lts.1",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "openai": "^6.16.0",
+    "pdf-parse": "^2.4.5"
   }
+  
 }
